Fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,32 +26,58 @@ footer {
 /* ============================ */
 
 .nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.25dvh 2.5dvw;
     background-color: #ffffff;
     top: 0;
     left: 0;
     width: 100%;
     height: fit-content;
-    padding: 2dvh;
-    position: fixed;
     /* border-bottom: #60c5ff 3px solid; */
     border-bottom: rgb(0, 92, 137) 3px solid;
     box-shadow: 0px 0px 20px 0px rgba(36, 86, 107, 0.29);
 }
 
 .nav-brand {
+    display: flex;
+    align-items: center;
+    gap: 10px;
     color: rgb(0, 92, 137);
     font-size: 1.5rem;
     text-decoration: none;
-    float: left;
-    padding-right: 30px;
-    margin-top: -5px;
-    margin-bottom: -2px;
 }
 
+.nav-brand-logo {
+    height: 25px;
+    width: 25px;
+    border-radius: 8px;
+}
+
+.nav-brand-link {
+    text-decoration: inherit;
+    color: inherit;
+}
+
+.nav-brand-name {
+    text-decoration: inherit;
+    font-size: 1.4rem;
+    color: rgb(2, 119, 178);
+}
+
+.nav-links-container {
+    display: flex; 
+    align-items: center; 
+    flex: 1;
+    margin-left: 32px;
+}
 
 .nav-links {
     display: flex;
     align-items: center;
+    gap: 18px;
+    margin-left: 32px;
 }
 
 .nav-links a {
@@ -59,9 +85,6 @@ footer {
     font-size: 1.1rem;
     transition: /*font-size 0.2s ease,*/ color 0.2s ease;
     text-decoration: none;
-    text-align: center;
-    min-width: fit-content;
-    padding-left: 15px;
 }
 
 .nav-links a:hover {
@@ -72,6 +95,7 @@ footer {
 .nav-user {
     right: 20px;
     position: fixed;
+    margin-left: auto;
 }
 
 .nav-uname {
@@ -79,11 +103,10 @@ footer {
     font-size: 1.1rem;
 }
 
-.nav-user.dropdown {
-    position: absolute;
+.nav-user .dropdown {
     margin-right: 2.5dvw;
-    float: right;
 }
+
 .nav-user-icon {
     font-size: 1.8rem;
     cursor: pointer;
@@ -92,6 +115,7 @@ footer {
     font-size: 1rem;
     position: relative;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -102,57 +126,13 @@ footer {
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     z-index: 1;
 }
+
 .dropdown-content a {
     color: #333;
     padding: 10px 16px;
     text-decoration: none;
     display: block;
     border-radius: 15px;
-}
-
-.login-container {
-    width: 100%;
-    display: block;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.admin-panel {
-    width: 90%;
-    max-width: 1200px;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-}
-
-.admin-analytics {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.admin-tasks {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.gbt-dash {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 
 .dropdown-content a:hover {
@@ -164,11 +144,25 @@ footer {
     transition: 0.3s ease;
 }
 
+.nav-login {
+    margin-right: 1dvw;
+}
+
+.nav-register {
+    margin-left: 1dvw;
+}
+
+
 /* ============================ */
 /* ======== Login Page ======== */
 /* ============================ */
 
 .login-container {
+    width: 100%;
+    display: block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
@@ -181,9 +175,9 @@ footer {
     left: 50%;
     transform: translate(-50%,-50%);
     background: #fff;
-    padding: 50px 60px 70px;
+    padding: 20px 50px 40px;
     text-align: center;
-    border-radius: 25px;
+    border-radius: 45px;
 }
 
 .form-box h1 {
@@ -294,10 +288,53 @@ form p a {
 }
 
 .input-group{
-    height: 280px;
+    height: fit-content;
+    padding-bottom: 30px;
 }
 
 .btn-field button.disable{
     background: #eaeaea;
     color: #555;
+}
+
+
+/* ============================ */
+/* ======== Admin Page ======== */
+/* ============================ */
+
+.admin-panel {
+    width: 90%;
+    max-width: 1200px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+.admin-analytics {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.admin-tasks {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.gbt-dash {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
